grammar.js
		file: ($) =>
			seq(
				optional(seq($._header, $._end_newline)),
				repeat1(seq($._module_elem, $._end_newline)),
			),
		//TODO i could make a different version of this for when the module is an interface
		_module_elem: ($) =>
			choice(
				$.annotation_type_def,
				$.alias_type_def,
				$.nominal_type_def,
				$.expect,
				$.implements_definition,
				$.value_declaration,
				$.expr_body,
				$.import_expr,
				$.import_file_expr,
			),

		expect: ($) => prec(1, seq("expect", field("body", $.expr_body))),
		value_declaration: ($) =>
			prec(
				0,
				seq(
					//TODO i should be able to find a better solution that this silly /n
					optional(seq($.annotation_type_def, $._end_newline)),

					// $._newline,
					alias($._assigment_pattern, $.decl_left),
					"=",
					field("body", alias($.expr_body_terminal, $.expr_body)),
				),
			),

		expr_body: ($) =>
			choice(
				seq(
					$._indent,
					field(
						"declarations",
						repeat(
							choice(
								$.value_declaration,
								$.var_declaration,
								$.backpassing_expr,
								$.dbg_expr,
								$.bang_expr,
								$.for_expr,
							),
						),
					),
					field("result", $._expr_inner),
					$._dedent,
				),
				seq(
					repeat(choice($.value_declaration, $.var_declaration, $.backpassing_expr, $.dbg_expr, $.for_expr)),
					field("result", $._expr_inner),
				),
			),

		/**
		An expression body that should contain a newline after, like within a value declaration
		*/
		var_declaration: ($) =>
			seq(
				"var",
				alias($.var_identifier, $.decl_left),
				"=",
				field("body", $._expr_inner),
			),

		// Mutable variable identifier: $name
		for_expr: ($) =>
			seq(
				"for",
				field("binding", $._atomic_pattern),
				"in",
				field("collection", $._expr_inner),
				"{",
				field("body", repeat(choice($.value_declaration, $.var_declaration, $.var_assignment))),
				"}",
			),

		// Variable reassignment: $name = value
		_atom_expr: ($) =>
			choice(
				$.anon_fun_expr,
				$.const,
				$.record_expr,
				$.record_update_expr,
				$.if_expr,
				$.match_expr,
				$.variable_expr,
				$.parenthesized_expr,
				$.operator_as_function_expr,
				$.tag_expr,
				$.tuple_expr,
				$.list_expr,
				$.bang_expr,
				$.field_access_expr,
				$.crash_expr,
				$.var_identifier,
			),

		// Crash/unimplemented placeholder: ...
		_call_or_atom: ($) => choice($.function_call_expr, $.method_call_expr, $.pipe_call_expr, $._atom_expr),
		_expr_inner: ($) =>
			choice(
				$.prefixed_expression,
				$.bin_op_expr,
				$._call_or_atom,
				$.import_expr,
				$.import_file_expr,
				$.return_expr,
			),

		// Prefix operators: ! (NOT) and - (negation)
		prefixed_expression: ($) => prec.left(seq(choice("!", "-"), $._call_or_atom)),
		dbg_expr: ($) => seq("dbg", alias($.expr_body_terminal, $.expr_body)),
		else: ($) => seq("else", $.expr_body),
		then: ($) => seq("then", field("then", $.expr_body)),
		variable_expr: ($) => alias($.long_identifier, $.variable_expr),
		if_expr: ($) =>
			seq(
				"if",
				field("guard", $._expr_inner),
				choice(
					// Old style with explicit then
					seq($.then, repeat($.else_if), $.else),
					// Modern style - direct expression or block
					seq(
						field("then", choice($.block_body, $.expr_body)),
						repeat($.modern_else_if),
						$.modern_else,
					),
				),
			),
		_field_access_start: ($) =>
			prec(
				PREC.FIELD_ACCESS_START,
				choice(
					$.variable_expr,
					$.parenthesized_expr,
					$.record_expr,
					$.record_update_expr,
					$.method_call_expr,
					$.const,
					$.list_expr,
					$.tuple_expr,
				),
			),
		field_access_expr: ($) =>
			prec.left(
				seq(
					field("target", $._field_access_start),
					repeat1(seq(".", $.identifier)),
				),
			),

		// Method call with parentheses: expr.method() or expr.method(args)
		bin_op_expr: ($) =>
			field(
				"part",
				prec(
					PREC.PART,
					seq(
						$._call_or_atom,
						prec.right(repeat1(seq($.operator, $._call_or_atom))),
					),
				),
			),
		match_expr: ($) =>
			seq(
				"match",
				field("target", $._expr_inner),
				"{",
				repeat($.match_branch),
				"}",
			),

		match_branch: ($) =>
			seq(
				field("pattern", $._pattern),
				optional(seq("if", alias($._expr_inner, $.guard))),
				"=>",
				field("expr", $._expr_inner),
			),

		tag_expr: ($) =>
			prec.left(
				PREC.TAG,
				seq(
					choice(
						$.opaque_tag,
						$.tag,
						// Qualified tag: Module.Tag
						seq($.module, ".", $.tag),
					),
					repeat($._atom_expr),
				),
			),
		anon_fun_expr: ($) =>
			prec.left(
				seq(
					"|",
					optional($.argument_patterns),
					"|",
					choice($.block_body, $.expr_body),
					optional($._newline),
				),
			),

		// Block body with curly braces: { declarations... result }
		record_field_expr: ($) =>
			prec.right(seq($.field_name, optional(seq(":", $.expr_body)))),
		record_expr: ($) =>
			seq(
				"{",
				optional($.record_update_ext),
				sep_tail(choice($.record_field_expr, $.record_field_builder), ","),
				"}",
			),

		// Modern record update prefix: { ..person, field: value }
		list_expr: ($) =>
			seq("[", optional(sep1_tail(field("exprList", $._expr_inner), ",")), "]"),

		tuple_expr: ($) =>
			seq(
				"(",
				optional_indent(
					seq(
						field("expr", $._expr_inner),
						",",
						sep1_tail(field("expr", $._expr_inner), ","),
					),
					$,
				),
				")",
			),

		//####---------###
		//#### PATTERN ###
		//####---------###
		// Pattern rules (BEGIN)
		_pattern: ($) =>
			choice(
				// alias("null", $.null_pattern),
				alias("_", $.wildcard_pattern),
				alias($.const, $.const_pattern),
				$.identifier_pattern,
				$.as_pattern,
				$.disjunct_pattern,
				$.conjunct_pattern,
				// // $.repeat_pattern,
				$.paren_pattern,
				$.list_pattern,
				$.tag_pattern,
				$.record_pattern,
				$.tuple_pattern,
				$.range_pattern,
				// $.typed_pattern,
				// $.attribute_pattern,
				// :? atomic-type
				// :? atomic-type as ident
			),

		identifier_pattern: ($) => $.identifier,
		tag_pattern: ($) =>
			prec.left(
				PREC.TAG,
				seq(choice($.opaque_tag, $.tag), repeat($._atomic_pattern)),
			),
		tuple_pattern: ($) =>
			prec.right(
				seq(
					"(",
					$._atomic_pattern,
					",",
					repeat(prec.right(seq($._atomic_pattern, ","))),
					$._atomic_pattern,
					")",
				),
			),

		argument_patterns: ($) =>
			seq($._atomic_pattern, repeat(seq(",", $._atomic_pattern))),
		_atomic_pattern: ($) =>
			choice(
				"null",
				alias("_", $.wildcard_pattern),
				$.const,
				$.identifier_pattern,
				$.list_pattern,
				$.tuple_pattern,
				$.record_pattern,
				$.tag_pattern,
				$.range_pattern,
				seq("(", $._pattern, ")"),

				// :? atomic_type
			),
		_assigment_pattern: ($) =>
			choice(
				alias("_", $.wildcard_pattern),
				$.identifier_pattern,
				$.list_pattern,
				$.tuple_pattern,
				$.record_pattern,
			),

		list_pattern: ($) =>
			choice(
				seq("[", "]"),
				seq(
					"[",
					sep1_tail(choice($._atomic_pattern, $.list_spread_pattern), ","),
					"]",
				),
			),

		// Spread pattern in lists: [.., x] or [x, ..] or [.. as rest]
		record_pattern: ($) =>
			seq(
				"{",
				sep_tail(
					choice(
						// $.record_field_type,
						$.record_field_pattern,
						$.record_field_optional_pattern,
						// $.identifier_pattern,
					),
					",",
				),
				"}",
			),
		//TODO is this really a pattern??
		record_field_pattern: ($) =>
			seq($.field_name, optional(seq(":", $._atomic_pattern))),
		//###--------####
		//### HEADER ####
		//###--------###

		_header: ($) =>
			choice(
				$.app_header,
				$.platform_header,
				$.module_header,
				$.package_header,
			),
		app_header: ($) => seq("app", $.provides_list, $.packages_list),
		//TODO make this a function for app and platform
		packages_list: ($) =>
			seq("{", sep_tail(choice($.package_ref, $.platform_ref), ","), "}"),
		platform_ref: ($) =>
			seq($.identifier, ":", "platform", alias($.string, $.package_uri)),

		import_expr: ($) =>
			prec(
				PREC.IMPORT,
				seq(
					"import",
					optional(seq($.identifier, ".")),
					sep1($.module, "."),
					optional(
						choice(
							alias(seq("exposing", $.exposes_list), $.exposing),
							seq(alias("as", $.as), $.module),
						),
					),
				),
			),
		provides_list: ($) =>
			seq(
				"[",
				optional($.ident),
				repeat(seq(",", $.ident)),
				optional(","),
				"]",
			),
		annotation_type_def: ($) =>
			seq($.annotation_pre_colon, ":", $._type_annotation),
		alias_type_def: ($) =>
			seq($.apply_type, ":", field("body", $._type_annotation)),
		// Nominal types: `Name :: Type` (simple) or `Name := Type.{ methods }`
		nominal_type_def: ($) =>
			seq(
				$.apply_type,
				choice(alias("::", $.double_colon), alias(":=", $.colon_equals)),
				$._type_annotation,
				optional($.nominal_methods),
			),

		// Method block for nominal types: `.{ method_def ... }`
		nominal_methods: ($) =>
			seq(
				".",
				token.immediate("{"),
				repeat($._method_member),
				"}",
			),

		// Members inside nominal methods block - either type annotation or implementation
		_method_member: ($) =>
			choice(
				$.method_annotation,
				$.method_declaration,
			),

		// Type annotation inside method block (uses restricted types that don't allow space-separated args)
		_type_annotation: ($) =>
			prec.left(
				choice(
					seq(
						$._indent,
						choice($._type_annotation_no_fun, $.function_type),
						$._dedent,
					),
					choice($._type_annotation_no_fun, $.function_type),
				),
			),

		//TODO i can probably get rid of this, because type_annotation_no_fun can eventually laev to (functio_type)
		_type_annotation_paren_fun: ($) =>
			choice(
				$._type_annotation_no_fun,
				alias(seq("(", $.function_type, ")"), $.type_annotation_paren),
			),

		// Helper for either pure (->) or effectful (=>) arrows
		_function_arrow: ($) => choice($.arrow, $.effect_arrow),

		function_type: ($) =>
			seq(
				sep1(field("param", $._type_annotation_paren_fun), ","),
				$._function_arrow,
				sep1($._type_annotation_paren_fun, $._function_arrow),
			),

		_type_annotation_no_fun: ($) =>
			choice(
				$.parenthesized_type,
				$.record_type,
				$.apply_type,
				$.where_implements,
				$.implements_implementation,
				$.tags_type,
				$.bound_variable,
				$.inferred,
				$.wildcard,
				$.tuple_type,
			),
		where_implements: ($) =>
			prec.right(
				seq(
					$._type_annotation_no_fun,
					alias("where", $.where),
					choice(
						// Modern bracket syntax: where [a.method : Type]
						seq("[", sep1_tail($.where_constraint, ","), "]"),
						// Old syntax: where a implements Ability
						sep1($._implements_body, ","),
					),
				),
			),
		// Modern where constraint: a.method : a -> Str
		_implements_body: ($) => seq($.identifier, $.implements, $.ability_chain),

		tags_type: ($) => seq("[", optional($._tags_only), "]"),

		_tags_only: ($) =>
			choice(
				// Open tag union: [A, B, ..] or [A, B, ..others]
				seq(
					$.apply_type,
					repeat(seq(",", $.apply_type)),
					",",
					$.open_tag_union,
				),
				// Closed tag union: [A, B, C]
				seq(
					$.apply_type,
					repeat(seq(",", $.apply_type)),
					optional(","),
				),
				// Just open: [..]
				$.open_tag_union,
			),

		// Open tag union marker: .. or ..typevar
		type_variable: ($) => choice("_", $.bound_variable),

		bound_variable: ($) => alias($._lower_identifier, $.bound_variable),

		inferred: ($) => alias("_", $.inferred),

		apply_type: ($) =>
			prec.right(seq($.concrete_type, optional($.apply_type_args))),

		concrete_type: ($) =>
			prec(
				PREC.TYPEALIAS,
				seq(
					$._upper_identifier,
					repeat(prec(PREC.TYPEALIAS, seq(".", $._upper_identifier))),
				),
			),

		// Type arguments: List(a, b) or List a b (space-separated for backwards compat)
		apply_type_arg: ($) => prec.left($._type_annotation_no_fun),

		record_type: ($) =>
			seq(
				"{",
				sep_tail(
					choice($.record_field_type, $.record_field_type_optional),
					",",
				),
				"}",
			),

		record_field_type: ($) => seq($.field_name, ":", $._type_annotation),
		annotation_pre_colon: ($) =>
			choice(
				//TODO implimeent apply $.apply,
				//tag seems not needed when we have alias
				// $.tag,
				$.identifier,
			),

		const: ($) =>
			choice(
				$.float,
				$.xint,
				$.decimal,
				$.natural,
				$.uint,
				$.iint,

				$.char,
				$.string,
				$.multiline_string,
				$.line_string,
				$.int,
				"false",
				"true",
				// $.unit,
			),

		//STRINGS
		string: ($) =>
			seq(
				'"',
				repeat(
					choice(imm(prec(0, /[^\n\\"]/)), $.interpolation_char, $.escape_char),
				),
				'"',
			),

		multiline_string: ($) =>
			seq(
				'"""',
				repeat(
					choice(imm(prec(0, /[^\\]/)), $.interpolation_char, $.escape_char),
				),
				'"""',
			),

		// Line-prefix multiline string: \\Line 1\n\\Line 2
		escape_char: ($) => imm(/\\([\\"\'ntbrafv]|u\([0-9a-fA-F]+\))/),
		// String interpolation: ${expr}
		interpolation_char: ($) =>
			seq(
				imm(/\$\{/),
				$._expr_inner,
				"}",
			),
		int: ($) => token(seq(/[0-9][0-9_]*/)),

		//ROC
		arrow: ($) => "->",
		identifier: ($) => $._lower_identifier,
		field_name: ($) => alias($.identifier, $.field_name),
		_lower_identifier: ($) => /_?[a-z][0-9a-zA-Z_]*!?/,
		_upper_identifier: ($) => /[A-Z][0-9a-zA-Z_]*/,
		tag: ($) => alias($._upper_identifier, $.tag),
		module: ($) => alias($._upper_identifier, $.module),
		line_comment: ($) => token(prec(-1, /#[^\n]*/)),

		operator: ($) => alias($.operator_identifier, $.operator),
